--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   random_color: ^1.0.6-nullsafety
+  shake: ^2.1.0
 
 dev_dependencies:
   flutter_test:
