--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   random_color: ^1.0.6-nullsafety
   shake: ^2.1.0
+  flutter_riverpod: ^2.1.1
 
 dev_dependencies:
   flutter_test:
