--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   random_color: ^1.0.6-nullsafety
   shake: ^2.1.0
   flutter_riverpod: ^2.1.1
+  tinycolor2: ^3.0.1
 
 dev_dependencies:
   flutter_test:
