Change theme font

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
-
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf
   uses-material-design: true
 
