--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   shake: ^2.1.0
   flutter_riverpod: ^2.1.1
   tinycolor2: ^3.0.1
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
