--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_riverpod: ^2.1.1
   tinycolor2: ^3.0.1
   url_launcher: ^6.1.7
+  font_awesome_flutter: ^10.3.0
 
 dev_dependencies:
   flutter_test:
