--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   font_awesome_flutter: ^10.3.0
   flutter_colorpicker: ^1.0.3
   flutter_launcher_icons: ^0.11.0
+  firebase_auth: ^4.2.5
 
 dev_dependencies:
   flutter_test:
