config for android release

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.coolors_inspired_flutter">
    <application
-        android:label="coolors_inspired_flutter"
+        android:label="Coolor Clone"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
