--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   flutter_launcher_icons: ^0.11.0
   firebase_auth: ^4.2.5
+  google_sign_in: ^5.4.4
+  go_router: ^6.0.3
 
 dev_dependencies:
   flutter_test:
