--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   google_sign_in: ^5.4.4
   go_router: ^6.0.3
   firebase_ui_auth: ^1.1.9
+  cloud_firestore: ^4.3.1
 
 dev_dependencies:
   flutter_test:
