--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   font_awesome_flutter: ^10.3.0
   flutter_colorpicker: ^1.0.3
   flutter_launcher_icons: ^0.11.0
+  firebase_core: ^2.6.1
   firebase_auth: ^4.2.5
   google_sign_in: ^5.4.4
   go_router: ^6.0.3
